# gmailpoc

./: .gitignore  README.md  pyproject.toml  test_setup.py
gmail_cli/: __init__.py  email_table_formatter.py  gmail_client.py  main.py  message_utils.py  table_formatter.py
tests/: test_email_table_formatter.py  test_message_utils.py
