[tool.poetry]
name = "gmail-cli"
version = "0.1.0"
description = "A CLI tool to access Gmail and list unread emails"
authors = ["Eduardo Oliveira <me@eduardooliveira.net>"]
readme = "README.md"
packages = [{ include = "gmail_cli" }]

[tool.poetry.dependencies]
python = "^3.9.0"
google-auth = "^2.23.0"
google-auth-oauthlib = "^1.1.0"
google-auth-httplib2 = "^0.1.1"
google-api-python-client = "^2.108.0"
rich = "^13.7.0"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.11.0"
flake8 = "^6.1.0"
pylint = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gmail-cli = "gmail_cli.main:main"

[tool.black]
line-length = 79
